fixed background bug that stopped background color from covering entire screen after a search had been done.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 body {
     background: rgb(7, 7, 37);
-    color: white;
-    height: 100vh; 
+    color: white; 
     padding: 10px;
 }
 
